Bug 200424 nsEventQueueServiceImpl::GetThreadEventQueue might return NS_OK w/ null out [@ nsMemoryImpl::FlushMemory] r=darin